@@ -269,7 +269,7 @@
 		<junit.version>4.12</junit.version>
 		<dependency.locations.enabled>false</dependency.locations.enabled>
 		<main.basedir>${project.basedir}</main.basedir>
-		<maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
+		<maven-enforcer-plugin.version>3.3.1</maven-enforcer-plugin.version>
 		<surefire.version>2.19.1</surefire.version>
 	</properties>
 
@@ -313,46 +313,6 @@
 	</ciManagement>
 
 	<profiles>
-		<profile>
-			<id>spark-2.1</id>
-			<modules>
-				<module>spark/spark-2.1</module>
-				<module>spark/spark-common</module>
-			</modules>
-			<properties>
-				<spark.version>2.1.1</spark.version>
-				<spark.binary.version>2.1</spark.binary.version>
-			</properties>
-		</profile>
-		<profile>
-			<id>spark-2.0</id>
-			<modules>
-				<module>spark/spark-2.0</module>
-				<module>spark/spark-common</module>
-			</modules>
-			<properties>
-				<spark.version>2.0.2</spark.version>
-				<spark.binary.version>2.0</spark.binary.version>
-			</properties>
-		</profile>
-		<profile>
-			<id>java7</id>
-			<properties>
-				<spark.test.jvm.opts>-ea -Xms768m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</spark.test.jvm.opts>
-			</properties>
-			<activation>
-				<jdk>[,1.8)</jdk> <!-- version < 1.8 -->
-			</activation>
-		</profile>
-		<profile>
-			<id>java8</id>
-			<properties>
-				<spark.test.jvm.opts>-ea -Xms768m -Xmx1024m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=512m</spark.test.jvm.opts>
-			</properties>
-			<activation>
-				<jdk>[1.8,)</jdk> <!-- version >= 1.8 -->
-			</activation>
-		</profile>
 		<profile>
 			<id>doclint-java8-disable</id>
 			<activation>
@@ -482,6 +442,7 @@
 					<version>3.0.2</version>
 					<configuration>
 						<finalName>${project.artifactId}-${project.version}</finalName>
+						<outputDirectory>${main.basedir}</outputDirectory>
 					</configuration>
 				</plugin>
 				<plugin>
