@@ -42,6 +42,7 @@
 		<main.basedir>${project.parent.basedir}</main.basedir>
 		<scala.version>2.11.8</scala.version>
 		<scala.binary.version>2.11</scala.binary.version>
+		<scalatest.jvm.opts>-ea -Xms768m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</scalatest.jvm.opts>
 	</properties>
 
 	<dependencyManagement>
@@ -109,6 +110,38 @@
 					<artifactId>scala-maven-plugin</artifactId>
 					<version>3.2.2</version>
 				</plugin>
+				<plugin>
+					<groupId>org.scalatest</groupId>
+					<artifactId>scalatest-maven-plugin</artifactId>
+					<version>1.0</version>
+					<configuration>
+						<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+						<junitxml>.</junitxml>
+						<filereports>SparkTestSuite.txt</filereports>
+						<argLine>${scalatest.jvm.opts}</argLine>
+						<stderr />
+						<environmentVariables>
+							<SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>
+							<SPARK_SCALA_VERSION>${scala.binary.version}</SPARK_SCALA_VERSION>
+							<SPARK_TESTING>1</SPARK_TESTING>
+							<JAVA_HOME>${env.JAVA_HOME}</JAVA_HOME>
+							<PATH>${env.JAVA_HOME}/bin:${env.PATH}</PATH>
+						</environmentVariables>
+						<systemProperties>
+							<log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
+							<derby.system.durability>test</derby.system.durability>
+							<java.awt.headless>true</java.awt.headless>
+							<java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+							<spark.testing>1</spark.testing>
+							<spark.ui.enabled>false</spark.ui.enabled>
+							<spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
+							<spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
+							<!-- Needed by sql/hive tests. -->
+							<test.src.tables>__not_used__</test.src.tables>
+						</systemProperties>
+						<tagsToExclude>${test.exclude.tags}</tagsToExclude>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
@@ -145,9 +178,9 @@
 						<!-- <arg>-feature</arg> -->
 					</args>
 					<jvmArgs>
-						<jvmArg>-Xms512m</jvmArg>
+						<jvmArg>-Xms768m</jvmArg>
 						<jvmArg>-Xmx1024m</jvmArg>
-						<jvmArg>-XX:PermSize=64m</jvmArg>
+						<jvmArg>-XX:PermSize=128m</jvmArg>
 						<jvmArg>-XX:MaxPermSize=512m</jvmArg>
 						<jvmArg>-XX:ReservedCodeCacheSize=512m</jvmArg>
 					</jvmArgs>
